2010-02-24  Andrew Haley  <aph@redhat.com>

PR java/40816
        * include/jni_md.h: jboolean is an unsigned type.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157047 138bc75d-0d04-0410-961f-82ee72b054a4